@@ -34,15 +34,51 @@ import java.util.*;
 */
 public class StdBehavior implements Behavior
 {
-	@Override public String ID(){return "StdBehavior";}
-	@Override public String name(){return ID();}
-	protected int canImproveCode(){return Behavior.CAN_MOBS;}
-	@Override public long flags(){return 0;}
-	@Override public boolean grantsAggressivenessTo(MOB M){return false;}
-	@Override public int getTickStatus(){return Tickable.STATUS_NOT;}
-	@Override public void initializeClass(){}
-	@Override public String accountForYourself(){ return "";}
-	protected boolean isSavableBehavior=true;
+	@Override
+	public String ID()
+	{
+		return "StdBehavior";
+	}
+
+	@Override
+	public String name()
+	{
+		return ID();
+	}
+
+	protected int canImproveCode()
+	{
+		return Behavior.CAN_MOBS;
+	}
+
+	@Override
+	public long flags()
+	{
+		return 0;
+	}
+
+	@Override
+	public boolean grantsAggressivenessTo(MOB M)
+	{
+		return false;
+	}
+
+	@Override
+	public int getTickStatus()
+	{
+		return Tickable.STATUS_NOT;
+	}
+
+	@Override
+	public void initializeClass()
+	{
+	}
+
+	@Override
+	public String accountForYourself()
+	{
+		return "";
+	}
 
 	public StdBehavior()
 	{
@@ -50,7 +86,9 @@ public class StdBehavior implements Behavior
 		//CMClass.bumpCounter(this,CMClass.CMObjectType.BEHAVIOR);//removed for perf
 	}
 
-	protected String parms="";
+	protected String	parms				= "";
+
+	protected boolean	isSavableBehavior	= true;
 
 	/** return a new instance of the object*/
 	@Override
@@ -82,13 +120,44 @@ public class StdBehavior implements Behavior
 			return new StdBehavior();
 		}
 	}
-	@Override public void registerDefaultQuest(String questName){}
-	@Override public void startBehavior(PhysicalAgent forMe){}
-	//protected void finalize(){CMClass.unbumpCounter(this,CMClass.CMObjectType.BEHAVIOR);}//removed for perf
-	@Override public void setSavable(boolean truefalse){isSavableBehavior=truefalse;}
-	@Override public boolean isSavable(){return isSavableBehavior;}
-	@Override public boolean amDestroyed(){ return false;}
-	@Override public void destroy() {parms="";}
+
+	@Override
+	public void registerDefaultQuest(String questName)
+	{
+	}
+
+	@Override
+	public void startBehavior(PhysicalAgent forMe)
+	{
+	}
+
+	// protected void
+	// finalize(){CMClass.unbumpCounter(this,CMClass.CMObjectType.BEHAVIOR);}//removed
+	// for perf
+	@Override
+	public void setSavable(boolean truefalse)
+	{
+		isSavableBehavior = truefalse;
+	}
+
+	@Override
+	public boolean isSavable()
+	{
+		return isSavableBehavior;
+	}
+
+	@Override
+	public boolean amDestroyed()
+	{
+		return false;
+	}
+
+	@Override
+	public void destroy()
+	{
+		parms = "";
+	}
+
 	protected MOB getBehaversMOB(Tickable ticking)
 	{
 		if(ticking==null)
@@ -98,9 +167,13 @@ public class StdBehavior implements Behavior
 			return (MOB)ticking;
 		else
 		if(ticking instanceof Item)
+		{
 			if(((Item)ticking).owner() != null)
+			{
 				if(((Item)ticking).owner() instanceof MOB)
 					return (MOB)((Item)ticking).owner();
+			}
+		}
 
 		return null;
 	}
@@ -118,18 +191,45 @@ public class StdBehavior implements Behavior
 			return mob.location();
 
 		if(ticking instanceof Item)
+		{
 			if(((Item)ticking).owner() != null)
+			{
 				if(((Item)ticking).owner() instanceof Room)
 					return (Room)((Item)ticking).owner();
-
+			}
+		}
 		return null;
 	}
 
-	@Override public String getParms(){return parms;}
-	@Override public void setParms(String parameters){parms=parameters;}
-	@Override public String parmsFormat(){return CMParms.FORMAT_UNDEFINED;}
-	@Override public int compareTo(CMObject o){ return CMClass.classID(this).compareToIgnoreCase(CMClass.classID(o));}
-	@Override public List<String> externalFiles(){return null;}
+	@Override
+	public String getParms()
+	{
+		return parms;
+	}
+
+	@Override
+	public void setParms(String parameters)
+	{
+		parms = parameters;
+	}
+
+	@Override
+	public String parmsFormat()
+	{
+		return CMParms.FORMAT_UNDEFINED;
+	}
+
+	@Override
+	public int compareTo(CMObject o)
+	{
+		return CMClass.classID(this).compareToIgnoreCase(CMClass.classID(o));
+	}
+
+	@Override
+	public List<String> externalFiles()
+	{
+		return null;
+	}
 
 	@Override
 	public void executeMsg(Environmental affecting, CMMsg msg)
@@ -143,7 +243,12 @@ public class StdBehavior implements Behavior
 		return true;
 	}
 
-	@Override public boolean canImprove(int can_code){return CMath.bset(canImproveCode(),can_code);}
+	@Override
+	public boolean canImprove(int can_code)
+	{
+		return CMath.bset(canImproveCode(), can_code);
+	}
+
 	@Override
 	public boolean canImprove(PhysicalAgent E)
 	{
@@ -163,6 +268,7 @@ public class StdBehavior implements Behavior
 			return true;
 		return false;
 	}
+
 	public static boolean canActAtAll(Tickable affecting)
 	{
 		return CMLib.flags().canActAtAll(affecting);
@@ -195,43 +301,71 @@ public class StdBehavior implements Behavior
 		return CMLib.lang().fullSessionTranslation(str, xs);
 	}
 	
-	protected static final String[] CODES={"CLASS","TEXT"};
-	@Override public String[] getStatCodes(){return CODES;}
+	protected static final String[]	CODES	= { "CLASS", "TEXT" };
+
+	@Override
+	public String[] getStatCodes()
+	{
+		return CODES;
+	}
+
 	protected int getCodeNum(String code)
 	{
 		for(int i=0;i<CODES.length;i++)
+		{
 			if(code.equalsIgnoreCase(CODES[i]))
 				return i;
+		}
 		return -1;
 	}
+
 	@Override
 	public String getStat(String code)
 	{
 		switch(getCodeNum(code))
 		{
-		case 0: return ID();
-		case 1: return getParms();
+		case 0:
+			return ID();
+		case 1:
+			return getParms();
 		}
 		return "";
 	}
+
 	@Override
 	public void setStat(String code, String val)
 	{
 		switch(getCodeNum(code))
 		{
-		case 0: return;
-		case 1: setParms(val); break;
+		case 0:
+			return;
+		case 1:
+			setParms(val);
+			break;
 		}
 	}
-	@Override public int getSaveStatIndex(){return getStatCodes().length;}
-	@Override public boolean isStat(String code){ return CMParms.indexOf(getStatCodes(),code.toUpperCase().trim())>=0;}
+
+	@Override
+	public int getSaveStatIndex()
+	{
+		return getStatCodes().length;
+	}
+
+	@Override
+	public boolean isStat(String code)
+	{
+		return CMParms.indexOf(getStatCodes(), code.toUpperCase().trim()) >= 0;
+	}
+
 	public boolean sameAs(Behavior E)
 	{
 		if(!(E instanceof StdBehavior))
 			return false;
 		for(int i=0;i<CODES.length;i++)
+		{
 			if(!E.getStat(CODES[i]).equals(getStat(CODES[i])))
 				return false;
+		}
 		return true;
 	}
 }
