@@ -2171,6 +2171,33 @@ reallow certain locales.  -CITY -UNDERWATER and others may be used to \
 restrict certain locales.  If no locale types are specified, then all rooms \
 in an area will be elligible.
 
+BEHAVIOR_SAILOR=\
+Behavior   : Sailor\n\r\
+Targets    : Mobs\n\r\
+Parameters : (TICKDELAY=[NUMBER]) (PEACEMOVER=[TRUE/FALSE]) (AREAONLY=[TRUE/FALSE])\n\r\
+Parameters : (FIGHTMOVER=[TRUE/FALSE]) (FIGHTTECH=[TRUE/FALSE])\n\r\
+Parameters : (AGGRO=[TRUE/FALSE]) (AGGROMOBS=[TRUE/FALSE])\n\r\
+Example    : tickdelay=10 peacemover=true areaonly=false\n\r\
+Description: \n\r\
+This behavior will turns a mob into a helpful member of the crew of a large \
+boardable sailing ship.  With no arguments, this behavior will make the mob \
+act more frequently based on level from 1-30 that will stand idle untin their \
+ship is in combat, at which point they will load and aim weapons they encounter.\n\r\
+\n\r\
+If a mob has the Shipwright behavior, they will automatically mend the ship \
+when not in combat, and when the ship is badly hurt during combat.  If a mob \
+has Grapples and is Mobile, they will throw grapples and board enemy ships \
+when appropriate.\n\r\
+\n\r\
+Parameters: \n\r\
+TICKDELAY - the number of ticks between actions, whether in combat or no\n\r\
+PEACEMOVER - will sail the ship around at random when not in combat\n\r\
+AREAONLY - if PEACEMOVER is true, this says whether the ship stays in-area\n\r\
+FIGHTMOVER - will sail the ship around at (somewhat) random during combat\n\r\
+FIGHTTECH - will load and aim weapons during combat\n\r\
+AGGRO - will target other ships they encounter and start fights\n\r\
+AGGROMOBS - if AGGRO is true, this will also start fights with mob-only ships
+
 BEHAVIOR_TARGETPLAYER=\
 Behavior   : TargetPlayer\n\r\
 Targets    : MOBs\n\r\
